<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_dayinjizhuangtai_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mingcheng"/>

        <TextView
            android:id="@+id/item_dayinjizhuangtai_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/leixing"/>

        <TextView
            android:id="@+id/item_dayinjizhuangtai_ip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ip"/>

        <TextView
            android:id="@+id/item_dayinjizhuangtai_relative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/guanlianpos"/>

        <ImageView
            android:id="@+id/item_dayinjizhuangtai_statu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:src="@drawable/default_img"
            android:text="@string/zhuangtai"/>

        <TextView
            android:id="@+id/item_dayinjizhuangtai_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_blue_selector"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:text="@string/ceshidayin"
            android:textColor="@color/color_white"/>
    </LinearLayout>

</LinearLayout>