<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/sp25"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:width="0dp"
            android:textColor="@color/color_666666"
            android:padding="@dimen/dp10"
            android:text="@string/system_name"
            android:textSize="@dimen/sp25"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yunfuwu"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp18"/>

            <TextView
                android:id="@+id/fuwuqiaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/yunfuwu_ip"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/sp17"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lianxiwomen"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/company_name"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp20"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lianxidizhi"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/company_address"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp20"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lianxifangshi"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/company_lianxifangshi"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp20"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zaixianbangzhu"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/company_zaixianbangzhu"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp20"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gengduozixun"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp18"/>

            <TextView
                android:id="@+id/gengduozixun_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp10"
                android:text="@string/company_gengduozixun"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/sp17"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>