<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/border_gray_normal"
              android:orientation="vertical"
              android:padding="@dimen/dp10">

    <TextView
        android:id="@+id/showyingbuzou_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shouyinbuzhou"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp18"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shouyinbuzhou1"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shouyinbuzhou2"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shouyinbuzhou3"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp15"/>

</LinearLayout>