<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.acewill.ordermachine.widget.TitileLayout
        android:id="@+id/title_ly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp70"
        app:m_title="@string/wangluozhuangtai"></com.acewill.ordermachine.widget.TitileLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp30"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wangluolianjie_zhongdaunshebei"/>

            <TextView
                android:id="@+id/terminal_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wangluolianjie_zhongdaunshebei_tv"
                android:textColor="@color/color_blue"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/net_perfect_img1"/>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wangluolianjie_luyouqi"/>

            <TextView
                android:id="@+id/wangguanip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wangluolianjie_luyouqi_tv"
                android:textColor="@color/color_blue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/net_great_img1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wangluolianjie_internet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wangluolianjie_internet_tv"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/net_disconnect_img1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wangluolianjie_smarnt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wangluolianjie_smarnt_tv"/>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/check_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp25"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp25"
        android:background="@drawable/border_blue_selector"
        android:padding="@dimen/dp5"
        android:text="@string/jiance"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp25"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiancejianguo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/gaojishezhi_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhixingzhuangtai"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wancheng"
                android:textColor="@color/green1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/gaojishezhi_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jiancejieguo"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wangluozhengchang"
                android:textColor="@color/green1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/gaojishezhi_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yichangwenti"/>

            <TextView
                style="@style/gaojishezhi_rigth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wu"
                android:textColor="@color/green1"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chulifangancankao"/>

        <TextView
            style="@style/gaojishezhi_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.如异常带你在[终端-网关]路由上，请检查...;"/>

        <TextView
            style="@style/gaojishezhi_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.如异常点在[网关-Internet]路由上，请检查...;"/>

        <TextView
            style="@style/gaojishezhi_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.如异常点在[Internet-云服务]路由上，请及时联系系统服务商处理，服务热线:3000-0103000,QQ:610163896"/>
    </LinearLayout>
</LinearLayout>