<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/border_gray_normal"
              android:orientation="vertical"
              android:padding="@dimen/dp10">


    <TextView
        android:id="@+id/where_tofind_terminal_code_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_tofind_terminal_code_tip1"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_tofind_terminal_code_tip2"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_tofind_terminal_code_tip3"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp15"/>

</LinearLayout>